--- a/pdf/reference.bib
+++ b/pdf/reference.bib
@@ -13,3 +13,13 @@
   title = {Kaggle},
   note = {on line at: \url{https://www.kaggle.com/}}
 }
+
+@misc{spacy,
+  title = {Spacy},
+  note = {on line at: \url{https://spacy.io/}}
+}
+
+@mics{gridSearchCV,
+	title = {GridSearchCV},
+	note = {on line at: \url{https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV}}
+}
